--- a/package.json
+++ b/package.json
@@ -1,26 +1,61 @@
 {
-  "name": "ptech-web",
-  "version": "0.1.0",
+  "name": "prompt-tw-next",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "latest": "yarn upgrade-interactive --latest",
+    "lint": "next lint",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14"
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui-float/react": "^0.12.0",
+    "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.3.2",
+    "@privateid/bravo-web-sdk": "^3.2.10",
+    "@sendgrid/mail": "^8.1.3",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tippyjs/react": "^4.2.6",
+    "aos": "^2.3.4",
+    "clsx": "^2.0.0",
+    "lightgallery": "^2.7.2",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
+    "nextjs-toploader": "^1.6.4",
+    "nodemailer": "^6.9.15",
+    "preline": "^1.9.0",
+    "react": "^18.2.0",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "react-scroll-parallax": "^3.4.2",
+    "react-text-typist": "^1.1.8",
+    "react-toastify": "^9.1.3",
+    "sendinblue-api": "^1.0.8",
+    "sharp": "^0.32.6",
+    "sib-api-v3-typescript": "^2.2.2",
+    "swiper": "^11.0.3",
+    "tailwind-merge": "^2.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "@types/aos": "^3.0.6",
+    "@types/node": "^20.8.9",
+    "@types/nodemailer": "^6.4.16",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.13",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "prettier": "^3.0.1",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
